Fix: ambience-on-icon in dark mode

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -190,7 +190,7 @@ button {
 
 #resetIcon path,
 #ambienceOffIcon path,
-#ambienceOnIcon {
+#ambienceOnIcon path {
     fill: var(--fill-icon-secondary);
 }
 
